UPDATE: added accountProgress.html with this styles. FIX: fixed gaps, styles to tiles headers and some other little fixes

--- a/www/css/account.css
+++ b/www/css/account.css
@@ -4,7 +4,7 @@
 }
 
 .account {
-    height: 50rem;
+    height: 47rem;
     background-color: var(--account-bg-clr);
     border-radius: 2rem;
     padding: 2rem;
@@ -66,6 +66,7 @@
                 margin: 0;
                 /* padding: 0 1rem; */
                 font-size: 2.5rem;
+                font-weight: 500;
             }
     
             .notifications-wrapper button{
@@ -100,7 +101,7 @@
 
             .photo-wrapper {
                 border-radius: 2rem;
-                height: 39.5rem;
+                height: 40.5rem;
                 aspect-ratio: 458 / 629;
 
                 img {
@@ -109,12 +110,18 @@
                 }
             }
 
+                h3 {
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                    margin: 0;
+                }
+
             .content-wrapper {
-                width: 40rem;
-                height: 39.5rem;
+                width: 41rem;
+                height: 40.5rem;
                 overflow: auto;
                 /* position: relative; */
-                row-gap: 1.4rem;
+                row-gap: 1rem;
                 -ms-overflow-style: none;
                 scrollbar-width: none;
 
@@ -122,10 +129,6 @@
                     display: none;
                 }
                 
-                h3 {
-
-                }
-
                 .stats-wrapper {
                     column-gap: 2rem;
 
@@ -244,9 +247,10 @@
 
                 .age-wrapper {
                     .age-tile {
-                        height: 6rem;
+                        height: 4rem;
+                        width: 38.8rem;
                         background: 
-                            url("../source/img/account/backgrounds/AgeBg.png") no-repeat center / 100%,
+                            url("../source/img/account/backgrounds/AgeBg.png") center / 100% no-repeat,
                             white;
                         aspect-ratio: none;
                         font-weight: 500;
@@ -258,7 +262,8 @@
                 .passed-steps-wrapper {
 
                     .passed-steps-tile {
-                        height: 24rem;
+                        height: 26rem;
+                        width: 38.8rem;
 
                         canvas {
                             height: 100%;
